Добавил анимацию из стайлгайда для навигации

--- a/source/index.html
+++ b/source/index.html
@@ -182,13 +182,16 @@
         <nav class="main-nav">
           <ul class="main-nav__list site-list list-reset">
             <li class="main-nav__item">
-              <a class="main-nav__link link-reset" href="#">О сервисе</a>
+              <a class="main-nav__link link-reset" href="#">
+                <span class="main-nav__link-text" data-hover="О&nbsp;сервисе">О сервисе</span></a>
             </li>
             <li class="main-nav__item">
-              <a class="main-nav__link link-reset" href="form.html">Направления</a>
+              <a class="main-nav__link link-reset" href="form.html">
+                <span class="main-nav__link-text" data-hover="Направления">Направления</span></a>
             </li>
             <li class="main-nav__item">
-              <a class="main-nav__link link-reset" href="catalog.html">Попутчики</a>
+              <a class="main-nav__link link-reset" href="catalog.html">
+                <span class="main-nav__link-text" data-hover="Попутчики">Попутчики</span></a>
             </li>
           </ul>
         </nav>
@@ -762,7 +765,8 @@
       <address class="how-to-find__adress">
         <p class="how-to-find__street">ул. Большая <br class="hide-on-tablets hide-on-desktops">Конюшенная, 19/8</p>
       </address>
-      <a class="button button--rout link-reset" href="#">Проложить маршрут
+      <a class="button button--rout link-reset" href="https://goo.gl/maps/KsXPCYLN8wnM4fpXA" target="_blank"
+        rel="noreferrer">Проложить маршрут
         <svg class="button__arrow-icon" width="11" height="12">
           <use xlink:href="#icon-fat-arrow"></use>
         </svg>
