--- a/source/catalog.html
+++ b/source/catalog.html
@@ -181,13 +181,16 @@
         <nav class="main-nav">
           <ul class="main-nav__list site-list list-reset">
             <li class="main-nav__item">
-              <a class="main-nav__link link-reset" href="#">О сервисе</a>
+              <a class="main-nav__link link-reset" href="#">
+                <span class="main-nav__link-text" data-hover="О&nbsp;сервисе">О сервисе</span></a>
             </li>
             <li class="main-nav__item">
-              <a class="main-nav__link link-reset" href="form.html">Направления</a>
+              <a class="main-nav__link link-reset" href="form.html">
+                <span class="main-nav__link-text" data-hover="Направления">Направления</span></a>
             </li>
             <li class="main-nav__item">
-              <a class="main-nav__link link-reset">Попутчики</a>
+              <a class="main-nav__link link-reset">
+                <span class="main-nav__link-text" data-hover="Попутчики">Попутчики</span></a>
             </li>
           </ul>
         </nav>
