Добавил состояние ошибки для textarea

--- a/source/form.html
+++ b/source/form.html
@@ -845,8 +845,8 @@
                 srcset="img/flags/bosnia-and-herzegovina-35-24@2x.png 2x" alt="Босния и Герцеговина">
             </picture>
           </label>
-          <textarea class="planner__textarea" name="plans-field" id="plans-fiel-1" cols="30" rows="9">План действий
-          </textarea>
+          <textarea class="planner__textarea" name="plans-field" id="plans-fiel-1" cols="30"
+            rows="9">План действий</textarea>
           <label class="planner__textarea-label" for="plans-field-2">Чехия
             <picture class="planner__flag planner__flag--czech">
               <source type="image/webp"
