--- a/source/index.html
+++ b/source/index.html
@@ -156,17 +156,17 @@
       <div class="menu__header">
         <a class="page-header__logo link-reset">
           <picture class="page-header__image">
-            <source class="page-header__image--desktop-webp" type="image/webp"
+            <source class="page-header__image page-header__image--desktop-webp" type="image/webp"
               srcset="img/logos/logo-desktop.webp 1x, img/logos/logo-desktop@2x.webp 2x" media="(min-width: 1440px)">
-            <source class="page-header__image--tablet-webp" type="image/webp"
+            <source class="page-header__image page-header__image--tablet-webp" type="image/webp"
               srcset="img/logos/logo-tablet.webp 1x, img/logos/logo-tablet@2x.webp 2x" media="(min-width: 768px)">
-            <source class="page-header__image--mobile-webp" type="image/webp"
+            <source class="page-header__image page-header__image--mobile-webp" type="image/webp"
               srcset="img/logos/logo-white-mobile.webp 1x, img/logos/logo-white-mobile@2x.webp 2x">
-            <source class="page-header__image--desktop-png"
+            <source class="page-header__image page-header__image--desktop-png"
               srcset="img/logos/logo-desktop.png 1x, img/logos/logo-desktop@2x.png 2x" media="(min-width: 1440px)">
-            <source class="page-header__image--tablet-png"
+            <source class="page-header__image page-header__image--tablet-png"
               srcset="img/logos/logo-tablet.png 1x, img/logos/logo-tablet@2x.png 2x" media="(min-width: 768px)">
-            <img class="page-header__image--mobile-png" src="img/logos/logo-white-mobile.png"
+            <img class="page-header__image page-header__image--mobile-png" src="img/logos/logo-white-mobile.png"
               srcset="img/logos/logo-white-mobile@2x.png 2x" alt="Погнали?">
           </picture>
         </a>
