Исправил меню при отключенном js, больше не перекрывает контент

--- a/source/form.html
+++ b/source/form.html
@@ -123,7 +123,7 @@
       </g>
     </symbol>
   </svg>
-  <header class="page-header page-header--menu-open page-header--inner">
+  <header class="page-header page-header--menu-open page-header--no-js page-header--inner">
     <div class="menu">
       <div class="menu__header">
         <a class="page-header__logo link-reset" href="index.html">
