--- a/source/index.html
+++ b/source/index.html
@@ -151,7 +151,7 @@
       <path d="M0 9L9.75.34v17.32L0 9z" fill="currentColor" />
     </symbol>
   </svg>
-  <header class="page-header page-header--menu-open">
+  <header class="page-header page-header--menu-open page-header--no-js">
     <div class="menu">
       <div class="menu__header">
         <a class="page-header__logo link-reset">
