--- a/source/catalog.html
+++ b/source/catalog.html
@@ -150,7 +150,7 @@
       <path d="M0 9L9.75.34v17.32L0 9z" fill="currentColor" />
     </symbol>
   </svg>
-  <header class="page-header page-header--menu-open page-header--inner">
+  <header class="page-header page-header--menu-open page-header--no-js page-header--inner">
     <div class="menu">
       <div class="menu__header">
         <a class="page-header__logo link-reset" href="index.html">
