Cделал ссылками элементы списка стран в формах

--- a/source/form.html
+++ b/source/form.html
@@ -797,17 +797,17 @@
               </li>
             </ul>
             <ul class="alphabet__countries-list list-reset">
-              <li class="alphabet__country">Австралия</li>
-              <li class="alphabet__country">Австрия</li>
-              <li class="alphabet__country">Азербайджан</li>
-              <li class="alphabet__country">Албания</li>
-              <li class="alphabet__country">Алжир</li>
-              <li class="alphabet__country">Ангола</li>
-              <li class="alphabet__country">Андорра</li>
-              <li class="alphabet__country alphabet__country--long-name">Антигуа и Барбуда</li>
-              <li class="alphabet__country">Аргентина</li>
-              <li class="alphabet__country">Армения</li>
-              <li class="alphabet__country">Афганистан</li>
+              <li class="alphabet__country"><a class="link-reset" href="#">Австралия</a></li>
+              <li class="alphabet__country"><a class="link-reset" href="#">Австрия</a></li>
+              <li class="alphabet__country"><a class="link-reset" href="#">Азербайджан</a></li>
+              <li class="alphabet__country"><a class="link-reset" href="#">Албания</a></li>
+              <li class="alphabet__country"><a class="link-reset" href="#">Алжир</a></li>
+              <li class="alphabet__country"><a class="link-reset" href="#">Ангола</a></li>
+              <li class="alphabet__country"><a class="link-reset" href="#">Андорра</a></li>
+              <li class="alphabet__country alphabet__country--long-name"><a class="link-reset" href="#">Антигуа и Барбуда</a></li>
+              <li class="alphabet__country"><a class="link-reset" href="#">Аргентина</a></li>
+              <li class="alphabet__country"><a class="link-reset" href="#">Армения</a></li>
+              <li class="alphabet__country"><a class="link-reset" href="#">Афганистан</a></li>
             </ul>
           </div>
         </fieldset>
