--- a/source/form.html
+++ b/source/form.html
@@ -831,11 +831,7 @@
               </ul>
             </div>
           </div>
-          <p class="planner__info planner__info--step-3">
-            Наконец, расскажите о своих планах времяпровождения.&nbsp;
-            <br class="hide-on-tablets">Можно писать
-            в свободной форме и ставить тэги.
-          </p>
+          <p class="planner__info planner__info--step-3">Наконец, расскажите о своих планах времяпровождения. <br>Можно писать в свободной форме и ставить тэги.</p>
           <label class="planner__textarea-label planner__textarea-label--bosnia" for="plans-fiel-1">Босния и Герцеговина
             <picture class="planner__flag planner__flag--bosnia">
               <source type="image/webp"
@@ -865,7 +861,7 @@
             </picture>
           </label>
           <textarea class="planner__textarea planner__textarea--active" name="plans-field" id="plans-field-2" cols="30"
-            rows="9">Пить пиво и лазить &#10;по старым замкам, наслаждаться архитектурой и вот это все.
+            rows="9">Пить пиво и лазить по старым замкам, наслаждаться архитектурой и вот это все.
           </textarea>
           <div class="planner__buttons">
             <button class="button button--next-step link-reset" type="submit">
