Исправил скролл меню

--- a/source/form.html
+++ b/source/form.html
@@ -127,19 +127,21 @@
     <div class="menu">
       <div class="menu__header">
         <a class="page-header__logo link-reset" href="index.html">
-          <picture class="page-header__image">
+          <picture class="page-header__image page-header__image--menu-open">
             <source class="page-header__image page-header__image--desktop-webp" type="image/webp"
               srcset="img/logos/logo-desktop.webp 1x, img/logos/logo-desktop@2x.webp 2x" media="(min-width: 1440px)">
             <source class="page-header__image page-header__image--tablet-webp" type="image/webp"
-              srcset="img/logos/logo-tablet.webp 1x, img/logos/logo-tablet@2x.webp 2x" media="(min-width: 768px)">
+              srcset="img/logos/logo-blue-tablet.webp 1x, img/logos/logo-blue-tablet@2x.webp 2x"
+              media="(min-width: 768px)">
             <source class="page-header__image page-header__image--mobile-webp" type="image/webp"
-              srcset="img/logos/logo-white-mobile.webp 1x, img/logos/logo-white-mobile@2x.webp 2x">
+              srcset="img/logos/logo-blue-mobile.webp 1x, img/logos/logo-blue-mobile@2x.webp 2x">
             <source class="page-header__image page-header__image--desktop-png"
               srcset="img/logos/logo-desktop.png 1x, img/logos/logo-desktop@2x.png 2x" media="(min-width: 1440px)">
             <source class="page-header__image page-header__image--tablet-png"
-              srcset="img/logos/logo-tablet.png 1x, img/logos/logo-tablet@2x.png 2x" media="(min-width: 768px)">
-            <img class="page-header__image page-header__image--mobile-png" src="img/logos/logo-white-mobile.png"
-              srcset="img/logos/logo-white-mobile@2x.png 2x" alt="Погнали?">
+              srcset="img/logos/logo-blue-tablet.png 1x, img/logos/logo-blue-tablet@2x.png 2x"
+              media="(min-width: 768px)">
+            <img class="page-header__image page-header__image--mobile-png" src="img/logos/logo-blue-mobile.png"
+              srcset="img/logos/logo-blue-mobile@2x.png 2x" alt="Погнали?">
           </picture>
         </a>
         <button class="page-header__toggle-menu-button page-header__toggle-menu-button--menu-open button-reset"
@@ -804,7 +806,8 @@
               <li class="alphabet__country"><a class="link-reset" href="#">Алжир</a></li>
               <li class="alphabet__country"><a class="link-reset" href="#">Ангола</a></li>
               <li class="alphabet__country"><a class="link-reset" href="#">Андорра</a></li>
-              <li class="alphabet__country alphabet__country--long-name"><a class="link-reset" href="#">Антигуа и Барбуда</a></li>
+              <li class="alphabet__country alphabet__country--long-name"><a class="link-reset" href="#">Антигуа и
+                  Барбуда</a></li>
               <li class="alphabet__country"><a class="link-reset" href="#">Аргентина</a></li>
               <li class="alphabet__country"><a class="link-reset" href="#">Армения</a></li>
               <li class="alphabet__country"><a class="link-reset" href="#">Афганистан</a></li>
@@ -831,7 +834,8 @@
               </ul>
             </div>
           </div>
-          <p class="planner__info planner__info--step-3">Наконец, расскажите о своих планах времяпровождения. <br>Можно писать в свободной форме и ставить тэги.</p>
+          <p class="planner__info planner__info--step-3">Наконец, расскажите о своих планах времяпровождения. <br>Можно
+            писать в свободной форме и ставить тэги.</p>
           <label class="planner__textarea-label planner__textarea-label--bosnia" for="plans-fiel-1">Босния и Герцеговина
             <picture class="planner__flag planner__flag--bosnia">
               <source type="image/webp"
