Поправил стили для alphabet__letter form.html и catalog.html

--- a/source/form.html
+++ b/source/form.html
@@ -723,94 +723,94 @@
             </h2>
             <ul class="alphabet__list list-reset">
               <li class="alphabet__item">
-                <a class="alphabet__letter alphabet__letter--selected link-reset" href="#">А</a>
+                <a class="alphabet__letter alphabet__letter--form alphabet__letter--selected alphabet__letter--selected-form link-reset" href="#">А</a>
               </li>
               <li class="alphabet__item">
-                <a class="alphabet__letter link-reset" href="#">Б</a>
+                <a class="alphabet__letter alphabet__letter--form link-reset" href="#">Б</a>
               </li>
               <li class="alphabet__item">
-                <a class="alphabet__letter link-reset" href="#">В</a>
+                <a class="alphabet__letter alphabet__letter--form link-reset" href="#">В</a>
               </li>
               <li class="alphabet__item">
-                <a class="alphabet__letter link-reset" href="#">Г</a>
+                <a class="alphabet__letter alphabet__letter--form link-reset" href="#">Г</a>
               </li>
               <li class="alphabet__item">
-                <a class="alphabet__letter link-reset" href="#">Д</a>
+                <a class="alphabet__letter alphabet__letter--form link-reset" href="#">Д</a>
               </li>
               <li class="alphabet__item">
-                <a class="alphabet__letter link-reset" href="#">Е</a>
+                <a class="alphabet__letter alphabet__letter--form link-reset" href="#">Е</a>
               </li>
               <li class="alphabet__item">
-                <a class="alphabet__letter link-reset" href="#">З</a>
+                <a class="alphabet__letter alphabet__letter--form link-reset" href="#">З</a>
               </li>
               <li class="alphabet__item">
-                <a class="alphabet__letter link-reset" href="#">И</a>
+                <a class="alphabet__letter alphabet__letter--form link-reset" href="#">И</a>
               </li>
               <li class="alphabet__item">
-                <a class="alphabet__letter link-reset" href="#">К</a>
+                <a class="alphabet__letter alphabet__letter--form link-reset" href="#">К</a>
               </li>
               <li class="alphabet__item">
-                <a class="alphabet__letter link-reset" href="#">Л</a>
+                <a class="alphabet__letter alphabet__letter--form link-reset" href="#">Л</a>
               </li>
               <li class="alphabet__item">
-                <a class="alphabet__letter link-reset" href="#">М</a>
+                <a class="alphabet__letter alphabet__letter--form link-reset" href="#">М</a>
               </li>
               <li class="alphabet__item">
-                <a class="alphabet__letter link-reset" href="#">Н</a>
+                <a class="alphabet__letter alphabet__letter--form link-reset" href="#">Н</a>
               </li>
               <li class="alphabet__item">
-                <a class="alphabet__letter link-reset" href="#">О</a>
+                <a class="alphabet__letter alphabet__letter--form link-reset" href="#">О</a>
               </li>
               <li class="alphabet__item">
-                <a class="alphabet__letter link-reset" href="#">П</a>
+                <a class="alphabet__letter alphabet__letter--form link-reset" href="#">П</a>
               </li>
               <li class="alphabet__item">
-                <a class="alphabet__letter link-reset" href="#">Р</a>
+                <a class="alphabet__letter alphabet__letter--form link-reset" href="#">Р</a>
               </li>
               <li class="alphabet__item">
-                <a class="alphabet__letter link-reset" href="#">С</a>
+                <a class="alphabet__letter alphabet__letter--form link-reset" href="#">С</a>
               </li>
               <li class="alphabet__item">
-                <a class="alphabet__letter link-reset" href="#">Т</a>
+                <a class="alphabet__letter alphabet__letter--form link-reset" href="#">Т</a>
               </li>
               <li class="alphabet__item">
-                <a class="alphabet__letter link-reset" href="#">У</a>
+                <a class="alphabet__letter alphabet__letter--form link-reset" href="#">У</a>
               </li>
               <li class="alphabet__item">
-                <a class="alphabet__letter link-reset" href="#">Ф</a>
+                <a class="alphabet__letter alphabet__letter--form link-reset" href="#">Ф</a>
               </li>
               <li class="alphabet__item">
-                <a class="alphabet__letter link-reset" href="#">Х</a>
+                <a class="alphabet__letter alphabet__letter--form link-reset" href="#">Х</a>
               </li>
               <li class="alphabet__item">
-                <a class="alphabet__letter link-reset" href="#">Ч</a>
+                <a class="alphabet__letter alphabet__letter--form link-reset" href="#">Ч</a>
               </li>
               <li class="alphabet__item">
-                <a class="alphabet__letter link-reset" href="#">Ш</a>
+                <a class="alphabet__letter alphabet__letter--form link-reset" href="#">Ш</a>
               </li>
               <li class="alphabet__item">
-                <a class="alphabet__letter link-reset" href="#">Э</a>
+                <a class="alphabet__letter alphabet__letter--form link-reset" href="#">Э</a>
               </li>
               <li class="alphabet__item">
-                <a class="alphabet__letter link-reset" href="#">Ю</a>
+                <a class="alphabet__letter alphabet__letter--form link-reset" href="#">Ю</a>
               </li>
               <li class="alphabet__item">
-                <a class="alphabet__letter link-reset" href="#">Я</a>
+                <a class="alphabet__letter alphabet__letter--form link-reset" href="#">Я</a>
               </li>
             </ul>
             <ul class="alphabet__countries-list list-reset">
-              <li class="alphabet__country"><a class="link-reset" href="#">Австралия</a></li>
-              <li class="alphabet__country"><a class="link-reset" href="#">Австрия</a></li>
-              <li class="alphabet__country"><a class="link-reset" href="#">Азербайджан</a></li>
-              <li class="alphabet__country"><a class="link-reset" href="#">Албания</a></li>
-              <li class="alphabet__country"><a class="link-reset" href="#">Алжир</a></li>
-              <li class="alphabet__country"><a class="link-reset" href="#">Ангола</a></li>
-              <li class="alphabet__country"><a class="link-reset" href="#">Андорра</a></li>
-              <li class="alphabet__country alphabet__country--long-name"><a class="link-reset" href="#">Антигуа и
+              <li class="alphabet__country alphabet__country--form"><a class="alphabet__country-link link-reset" href="#">Австралия</a></li>
+              <li class="alphabet__country alphabet__country--form"><a class="alphabet__country-link link-reset" href="#">Австрия</a></li>
+              <li class="alphabet__country alphabet__country--form"><a class="alphabet__country-link link-reset" href="#">Азербайджан</a></li>
+              <li class="alphabet__country alphabet__country--form"><a class="alphabet__country-link link-reset" href="#">Албания</a></li>
+              <li class="alphabet__country alphabet__country--form"><a class="alphabet__country-link link-reset" href="#">Алжир</a></li>
+              <li class="alphabet__country alphabet__country--form"><a class="alphabet__country-link link-reset" href="#">Ангола</a></li>
+              <li class="alphabet__country alphabet__country--form"><a class="alphabet__country-link link-reset" href="#">Андорра</a></li>
+              <li class="alphabet__country alphabet__country--form alphabet__country--long-name"><a class="alphabet__country-link link-reset" href="#">Антигуа и
                   Барбуда</a></li>
-              <li class="alphabet__country"><a class="link-reset" href="#">Аргентина</a></li>
-              <li class="alphabet__country"><a class="link-reset" href="#">Армения</a></li>
-              <li class="alphabet__country"><a class="link-reset" href="#">Афганистан</a></li>
+              <li class="alphabet__country alphabet__country--form"><a class="alphabet__country-link link-reset" href="#">Аргентина</a></li>
+              <li class="alphabet__country alphabet__country--form"><a class="alphabet__country-link link-reset" href="#">Армения</a></li>
+              <li class="alphabet__country alphabet__country--form"><a class="alphabet__country-link link-reset" href="#">Афганистан</a></li>
             </ul>
           </div>
         </fieldset>
