Добавил фокус с клавиатуры для интерактивных элементов

--- a/source/index.html
+++ b/source/index.html
@@ -178,7 +178,7 @@
           <span class="visually-hidden">Открыть меню</span>
         </button>
         <div class="authorization authorization--menu-open">
-          <a class="button authorization__button link-reset">
+          <a class="button authorization__button link-reset" tabindex="0">
             <span class="authorization__text">Авторизация</span>
           </a>
         </div>
