--- a/source/catalog.html
+++ b/source/catalog.html
@@ -648,9 +648,9 @@
             </ul>
           </fieldset>
           <fieldset class="companion-selection__filter">
-            <button class="companion-selection__button companion-selection__button--open button-reset"
+            <button class="companion-selection__button button-reset"
               type="button">Музыка<span class="hide-on-mobile">:</span></button>
-            <ul class="companion-selection__list companion-selection__list--open list-reset">
+            <ul class="companion-selection__list list-reset">
               <li class="companion-selection__item">
                 <input class="companion-selection__checkbox visually-hidden" id="hard-rock" type="checkbox" name="music"
                   value="Тяжелый рок" checked>
@@ -693,7 +693,7 @@
           </fieldset>
           <fieldset class="companion-selection__filter companion-selection__filter--transport">
             <button
-              class="companion-selection__button companion-selection__button--transport companion-selection__button--open button-reset"
+              class="companion-selection__button companion-selection__button--transport button-reset"
               type="button">Транспорт<span class="hide-on-mobile">:</span>
             </button>
             <ul class="transport-list transport-list--catalog transport-list--filter list-reset">
@@ -1413,6 +1413,7 @@
   <script src="js/toggle-menu.min.js"></script>
   <script src="js/user-score-progress-bar.min.js"></script>
   <script src="js/filter-by-country.min.js"></script>
+  <script src="js/filter.min.js"></script>
 </body>
 
 </html>
